style.css
* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
  font-family: Lato, Arial, Helvetica, sans-serif;
}

body {
  background-color: #eee;
}

nav {
  position: fixed;
  top: 0;
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem;
  background-color: rgba(0, 0, 0, 0.65);
  color: white;
}

nav h3 a {
  text-decoration: none;
  color: white;
  font-size: 2.5rem;
}

.navItems {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
}

.navItems a {
  text-decoration: none;
  color: white;
  font-size: 2rem;
  font-weight: bold;
  margin-left: 1.5rem;
}

.headerImg {
  background-image: url(images/brian-erickson-XFneC_rHR48-unsplash.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  height: 100vh;
  width: auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.headerText {
  color: rgba(105, 255, 165, 0.82);
  font-size: 20rem;
  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
}

.main {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.runLog {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  margin: 1rem auto;
}

span {
  font-weight: 400;
}

#runLog-header {
  width: 95%;
  padding: 12px 0;
  color: white;
  background-color: #4bb4ef;
  font-size: 2.3rem;
}

.runLog-card {
  font-size: 2rem;
  width: 95%;
  margin: 1rem auto;
  background-color: #fff;
  -webkit-box-shadow: 0 3px 6px #999;
  box-shadow: 0 3px 6px #999;
  padding: 2rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: distribute;
  justify-content: space-around;
  line-height: 2.6rem;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.runLog-left {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-right: 2rem;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: flex-start;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.runLog-right {
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
}

.type-run {
  font-weight: bold;
  text-align: left;
}

.date-run {
  font-weight: bold;
  text-align: left;
}

.card-dist {
  font-weight: bold;
}

.card-pace {
  font-weight: bold;
}

.card-time {
  font-weight: bold;
}

.card-notes {
  font-weight: bold;
}

.runLog-comments {
  text-align: left;
}

#runLog-btn {
  font-size: 2.3rem;
  padding: 12px 0;
  width: 95%;
  color: white;
  background-color: #0122d2;
  border: none;
  text-decoration: none;
}

.distConvert {
  -webkit-box-flex: 1;
  -ms-flex: 1 0 40%;
  flex: 1 0 40%;
}

.divConverter-contain {
  background: -webkit-gradient(
    linear,
    left top,
    right bottom,
    from(#4eff1a),
    to(#4eb4ef)
  );
  background: linear-gradient(to bottom right, #4eff1a, #4eb4ef);
  width: 95%;
  margin: 1rem auto;
  text-align: center;
  display: grid;
  grid-template:
    "header header" 52px
    "from to" 1fr
    "calc calc" 60%
    / 1fr 1fr;
  grid-gap: 1.5rem;
}

.input {
  padding: 8px 0;
}

.from-inputs {
  grid-area: from;
  margin-left: 1rem;
}

.to-inputs {
  grid-area: to;
  margin-right: 1rem;
}

.calculate-dist {
  grid-area: calc;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.calc-btn {
  font-size: 2.3rem;
  padding: 12px 0;
  width: 80%;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  border: none;
  margin-bottom: 2rem;
}

.eq-dist {
  color: white;
  padding: 12px 0;
  background-color: rgba(0, 0, 0, 0.5);
  width: 50%;
  margin-bottom: 2rem;
}

.calculated-dist {
  margin-bottom: 2rem;
  padding: 8px 0;
}

.dist-header {
  grid-area: header;
  padding: 12px 0;
  width: 100%;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  font-size: 2.3rem;
  text-transform: uppercase;
}

.paceCalc {
  background: -webkit-gradient(
    linear,
    left top,
    right bottom,
    from(#4bb4ef),
    to(#0122d2)
  );
  background: linear-gradient(to bottom right, #4bb4ef, #0122d2);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.paceCalc-contain {
  width: 100%;
  text-align: center;
}

.paceCalc-header {
  width: 100%;
  padding: 12px 0;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  font-size: 2.3rem;
  text-transform: uppercase;
  margin-bottom: 2rem;
}

.input-div {
  margin-bottom: 2rem;
}

.set-pace-btn {
  font-size: 2.3rem;
  padding: 12px 0;
  width: 60%;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  border: none;
}

.pace-table {
  margin: 2rem auto;
  text-align: start;
  font-size: 2rem;
  border-collapse: collapse;
  min-width: 550px;
  color: white;
}

.pace-table thead tr {
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  text-align: left;
  font-weight: bold;
}

.pace-table th,
.pace-table td {
  padding: 12px 15px;
}

.pace-table tbody tr {
  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
}

.pace-table tbody tr:nth-of-type(even) {
  background-color: rgba(255, 255, 255, 0.9);
  color: black;
}

.pace-table tbody tr:last-of-type {
  border-bottom: 3px solid rgba(0, 0, 0, 0.5);
}

.popup {
  background-color: rgba(0, 0, 0, 0.8);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9999;
  height: 100vh;
  width: 100%;
  display: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.popup__content {
  font-size: 2rem;
  background-color: white;
  width: 70%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 2rem;
}

.popup__content label {
  padding-bottom: 1rem;
}

.popup__content input {
  font-size: 1.6rem;
  padding: 1.5rem;
}

.popup__content textarea {
  margin-bottom: 1.5rem;
  font-size: 1.6rem;
  padding: 1.5rem;
}

.form__btn {
  font-size: 2.3rem;
  padding: 12px 0;
  width: 100%;
  color: white;
  background-color: #4bb4ef;
  border: none;
  margin-bottom: 1rem;
}

.form__btn2 {
  font-size: 2.3rem;
  padding: 12px 0;
  width: 100%;
  color: white;
  background-color: red;
  border: none;
}

/*       ------------------------              MEDIA QUERIES            -----------------------------                                      */

@media screen and (max-width: 850px) {
  .main {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .headerImg {
    height: 80vh;
    width: auto;
  }

  .headerText {
    font-size: 17rem;
  }

  .paceCalc {
    width: 95%;
    margin: 1rem auto;
  }

  .set-pace-btn {
    width: 80%;
  }
  .runLog {
    width: 100%;
  }
}

@media screen and (max-width: 720px) {
  .headerImg {
    height: 80vh;
    width: auto;
  }
  .headerText {
    font-size: 13rem;
  }

  nav h3 a {
    font-size: 2rem;
  }

  .navItems a {
    font-size: 1.4rem;
  }

  .pace-table {
    min-width: 450px;
  }
}

@media screen and (max-width: 580px) {
  .headerImg {
    height: 80vh;
    width: auto;
  }

  .headerText {
    font-size: 10rem;
  }

  .runLog-card {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .runLog-right {
    padding: 2rem;
  }

  .pace-table {
    min-width: 350px;
  }
}

@media screen and (max-width: 450px) {
  .pace-table {
    min-width: 80%;
    font-size: 1.6rem;
  }
}

@media screen and (max-width: 390px) {
  nav h3 a {
    font-size: 1.2rem;
  }

  .navItems a {
    font-size: 1rem;
  }
  .headerImg {
    height: 80vh;
    width: auto;
  }
  .headerText {
    font-size: 7rem;
  }
}

